#ifndef SLOT_H
#define SLOT_H

struct Slot {
    int id;
    bool isAvailable;
};

#endif
