#ifndef VEHICLE_H
#define VEHICLE_H

#include <string>

struct Vehicle {
    std::string plate;
    int slotId;
};

#endif
